# http-extras

./: Cargo.toml
src/: aggregate.rs  lib.rs  response.rs
src/body/: aggregate.rs  json.rs  mod.rs
src/request/: auth.rs  mod.rs
