[package]
name = "tower-http-ext"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
http = "0.2.4"
http-body = "0.4.2"
hyper = "0.14.11"
pin-project-lite = "0.2.7"
serde = "1.0.126"
serde_json = "1.0.64"
tower = "0.4.8"
